--- a/LibraryWebSite/Web.config
+++ b/LibraryWebSite/Web.config
@@ -10,6 +10,7 @@
     <system.web>
       <compilation debug="true" targetFramework="4.5.2" />
       <httpRuntime targetFramework="4.5.2" />
+       <sessionState mode="InProc" timeout="1"></sessionState>
     </system.web>
 
 </configuration>
